@@ -3,7 +3,6 @@
 
 project(StaticDAnCEParser): ciao_component_dnc, taoexe, ciao_config_handlers, ciao_domainapplicationmanager_dnc, iortable, ciao_server_dnc, ciao_nodeapplicationmanager {
   exename   = StaticDAnCEParser
-  includes += ..
 
   Source_Files {
     StaticDAnCEParser.cpp
