@@ -1,3 +1,11 @@
+Mon Dec  4 12:16:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * DAnCE/StaticConfigurator/StaticDAnCEParser.cpp:
+          Use include from CIAO_ROOT and removed using namespace
+
+        * DAnCE/StaticConfigurator/StaticDAnCEParser.mpc:
+          Simplified this file
+
 Mon Dec  4 11:41:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * DAnCE/ExecutionManager/ExecutionManager.mpc:
